$Id: ChangeLog 4209 2016-01-22 20:49:44Z chrfranke $

2016-01-22  Christian Franke  <franke@computer.org>

	Various fixes suggested by clang analyser (ticket #640):
	dev_areca.cpp: Fix check of ARCMSR_READ_RQBUFFER result.
	knowndrives.cpp: Add missing member initialization.
	smartd.cpp: Fix crash on missing argument to '-s' directive.
	Add missing variable initialization.  Remove redundant assignment.

2016-01-21  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h: Added ADATA SP550 SSD (ticket #638)
	os_freebsd.cpp: Reduce variable scope where possible (cppcheck: variableScope)
	os_openbsd/os_netbsd - removed never used warning code defines (cppcheck)

2016-01-21  Christian Franke  <franke@computer.org>

	ataprint.cpp, smartd.cpp: Don't issue SCT commands if ATA Security
	is locked (ticket #637).

2016-01-19  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	 - Samsung PM871 SSD family (ticket #636)
	 - Fixed detection for Samsung SSD 850 EVO mSATA 120GB (ticket #635)
	 - Fixed Western Digital Caviar Black regexp, extended WD Black (ticket #631)

2016-01-06  Christian Franke  <franke@computer.org>

	drivedb.h:
	- SandForce Driven SSDs: Extra warning entry for buggy Corsair Force LS
	  (ticket #628)
	- Innodisk 3MG2-P SSDs: 1.8" variant
	- Innodisk 3ME3 SSDs
	- USB: Seagate Expansion Portable (0x0bc2:0x2322) (ticket #627)
	- USB: Jess-Link (0x0dbf:0x9001)

2016-01-01  Christian Franke  <franke@computer.org>

	Happy New Year! Update copyright year in version info.

2015-12-19  Christian Franke  <franke@computer.org>

	Makefile.am: Fix path of 'smart-pkg-uninstall' (Regression from r4190).

	update-smart-drivedb.8.in: Fix platform specific formatting.

2015-12-18  Alex Samorukov <samm@os2.kiev.ua>

	os_netbsd.cpp, os_openbsd.cpp: fix ioctl returtn value check
	os_darwin.cpp: fix error handling
	os_darwin: use /usr/local/ prefix to install on 10.11 (El Capitan)

2015-12-16  Douglas Gilbert  <dgilbert@interlog.com>
